tests/files/type_checker_tests/should_pass/041.cmdr
//Test index lvalues type check
x = [1, 2, 3];
x[x[1]] = x[0];
