tests/files/type_checker_tests/should_fail/228.cmdr
//Should not string concatenate
x = 1.23;
x += [1,2,3];